--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">hsb</string>
+    <string name="app_name">HSM</string>
+    <string name="btn_create">Create</string>
+    <string name="btn_update">Update</string>
+    <string name="head_service">Service</string>
+    <string name="select_category">Select Category</string>"
 </resources>
