login & view_profile screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">hsb</string>
+    <string name="app_name">HSM</string>
+    <string name="hotel_logo"/>
+    <string name="email_hint">Email</string>
+    <string name="password_hint">Password</string>
+    <string name="sign_in">Sign in</string>
+    <string name="back_to_main">Back</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="signin">Signin</string>
+    <string name="username">Pkdminh</string>
+    <string name="useremail">minhpcdhe170377@fpt.edu.vn</string>
 </resources>
