--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">hsb</string>
     <string name="edit_account">Edit Account</string>
+    <string name="delete">Delete</string>
 </resources>
