--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">hsb</string>
     <string name="edit_account">Edit Account</string>
     <string name="delete">Delete</string>
+    <string name="add_account">Add new account</string>
 </resources>
