--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">hsb</string>
-    <string name="hotel_logo"/>
-    <string name="email_hint">Email</string>
-    <string name="password_hint">Password</string>
+    <string name="hotel_logo" />
+    <string name="login_identify_hint">Username</string>
+    <string name="login_password_hint">Mật khẩu</string>
     <string name="sign_in">Sign in</string>
     <string name="back_to_main">Back</string>
-    <string name="forgot_password">Forgot Password</string>
-    <string name="signin">Signin</string>
+    <string name="login_forgot_password">Quên mật khẩu?</string>
+    <string name="login_signin_button">Đăng nhập</string>
     <string name="username">Pkdminh</string>
     <string name="useremail">minhpcdhe170377@fpt.edu.vn</string>
     <string name="edit_account">Edit Account</string>
@@ -19,4 +19,5 @@
     <string name="btn_update">Update</string>
     <string name="head_service">Service</string>
     <string name="select_category">Select Category</string>
+    <string name="login_title">Đăng nhập</string>
 </resources>
