--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="btn_update">Update</string>
     <string name="head_service">Service</string>
     <string name="select_category">Select Category</string>
+    <string-array name="dropdown_items">
+        <item>Active</item>
+        <item>DeActive</item>
+    </string-array>
 </resources>
