profile screen + change password

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="forgot_password">Quên mật khẩu</string>
     <string name="signin">Đăng nhập</string>
     <string name="username">Pkdminh</string>
-    <string name="useremail">minhpcdhe170377@fpt.edu.vn</string>
+    <string name="roomName">President Suite</string>
     <string name="edit_account">Edit Account</string>
     <string name="room_text">Phòng</string>
     <string name="room_type_text">Loại</string>
