--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="edit_account">Edit Account</string>
     <string name="delete">Delete</string>
     <string name="add_account">Add new account</string>
+    <string name="name">Name</string>
+    <string name="password">Password</string>
+    <string name="password_confirm">Password confirm</string>
+    <string name="email">Email</string>
 </resources>
