added forget_password screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="back_to_main">Quay lại</string>
     <string name="forgot_password">Quên mật khẩu</string>
     <string name="signin">Đăng nhập</string>
+    <string name="send_mail">Lấy mật khẩu mới</string>
     <string name="username">Pkdminh</string>
     <string name="useremail">minhpcdhe170377@fpt.edu.vn</string>
     <string name="edit_account">Edit Account</string>
