<fix>: base package

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,22 @@
 <resources>
-    <string name="app_name">hsb</string>
+    <string name="app_name">HSM</string>
     <string name="hotel_logo" />
-    <string name="label">Đăng nhập</string>
-    <string name="email_hint">Email</string>
+    <string name="login_label">Đăng nhập</string>
+    <string name="identity_hint">Username</string>
     <string name="password_hint">Mật khẩu</string>
-    <string name="sign_in">Sign in</string>
+    <string name="btn_login">Đăng nhập</string>
     <string name="back_to_main">Quay lại</string>
     <string name="forgot_password">Quên mật khẩu</string>
-    <string name="signin">Đăng nhập</string>
+    <string name="change_password">Đổi mật khẩu</string>
+    <string name="old_password">Mật khẩu cũ</string>
+    <string name="new_password">Mật khẩu mới</string>
+    <string name="confirm_password">Xác nhận mật khẩu</string>
     <string name="username">Pkdminh</string>
-    <string name="roomName">President Suite</string>
+    <string name="room_name">President Suite</string>
     <string name="edit_account">Edit Account</string>
     <string name="delete">Delete</string>
     <string name="add_account">Add new account</string>
     <string name="name">Name</string>
-    <string name="password">Password</string>
-    <string name="password_confirm">Password confirm</string>
     <string name="email">Email</string>
     <string name="room_text">Phòng</string>
     <string name="room_type_text">Loại</string>
